# taskwarrior-derusted

./: .pre-commit-config.yaml  CMakeLists.txt  ChangeLog  README.md
.github/workflows/: checks.yml  docker-image.yaml  release-check.yaml  tests.yaml
doc/: CMakeLists.txt
doc/devel/contrib/: releasing.md
doc/man/: task-sync.5.in  taskrc.5.in
performance/: CMakeLists.txt
scripts/: CMakeLists.txt
scripts/hooks/: on-add  on-add.the  on-modify
src/: CMakeLists.txt  Context.cpp  DOM.cpp  Hooks.cpp  TDB2.cpp  TDB2.h  TF2.cpp  Task.cpp  Task.h  Variant.h  dependency.cpp  feedback.cpp  main.h  recur.cpp  recur.h  rules.cpp  util.cpp  util.h
src/columns/: CMakeLists.txt  ColTags.cpp
src/commands/: CMakeLists.txt  CmdBurndown.cpp  CmdContext.cpp  CmdEdit.cpp  CmdNews.cpp  CmdPurge.cpp  CmdSync.cpp  CmdUndo.cpp
src/taskchampion-cpp/: CMakeLists.txt
test/: CMakeLists.txt  custom.test.py  hooks.on-modify.test.py  info.test.py  unusual_task.test.py
test/basetest/: task.py
test/docker/: ubuntu2204
test/test_hooks/: on-add-accept  on-add-misbehave2  on-add-misbehave3  on-add-misbehave4  on-add-misbehave5  on-add-misbehave6  on-add-modify  on-add-reject  on-add.dummy  on-exit-bad  on-exit-good  on-exit.dummy  on-modify-accept  on-modify-misbehave2  on-modify-misbehave3  on-modify-misbehave4  on-modify-misbehave5  on-modify-misbehave6  on-modify-reject  on-modify-revert  on-modify.dummy
